@@ -113,6 +113,8 @@ Fixes:
    not be found at times. [MG]
  * sortby()s results would sometimes be reversed by mistake. [GM]
  * Minor bugfix in @include. [MG]
+ * round() sometimes returned numbers with more decimal digits than
+   desired. 
 
 Version 1.8.4 patchlevel 2                                 Dec 06,  2010
 
